# AD-HOC

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO  report.sh  requirements.txt
brng/test/: CMakeLists.txt  MRG31k3p.cpp  MRG32k3a.cpp  MRG32k5a.cpp  MRG63k3a.cpp  MWC128_engine.cpp  MWC192_engine.cpp  MWC256_engine.cpp  PCG_engine.cpp  WELL1024a.cpp  WELL19937a.cpp  WELL44497a.cpp  WELL512a.cpp  arc4_engine.cpp  chacha_engine.cpp  dsfmt_engine.cpp  efiix_engine.cpp  gjrand_engine.cpp  hc128_engine.cpp  hc256_engine.cpp  isaac_engine.cpp  jsf_engine.cpp  lehmer_engine.cpp  lfsr_xor_engine.cpp  linear_congruential_engine.cpp  lxm_engine.cpp  mersenne_twister_engine.cpp  philox_engine.cpp  rarns_engine.cpp  read_csv.hpp  romu_engine.cpp  salsa_engine.cpp  seed_seq.hpp  seed_seq_inserter.hpp  sfc_engine.cpp  sfmt_engine.cpp  sobol_engine.cpp  speck_engine.cpp  splitmix_engine.cpp  squares_engine.cpp  (+25 more)
brng/test/distribution/: RNGtest.hpp  centered_canonical_distribution.cpp  normal_distribution.cpp
brng/test/tools/: bit_find.cpp  circular_buffer.cpp  mask.cpp  modular_arithmetic.cpp  unshift.cpp
case_studies/: CMakeLists.txt
case_studies/BRNG/: CMakeLists.txt  bit_find.cpp  bit_find.hpp  linear_congruential_engine.cpp  linear_congruential_engine.hpp  mersenne_twister_engine.cpp  mersenne_twister_engine.hpp  philox_engine.cpp  philox_engine.hpp  sobol.cpp  sobol_clean.cpp  sobol_engine.hpp  split_mix.cpp  split_mix.hpp  subtract_with_carry_engine.cpp  subtract_with_carry_engine.hpp  test_tools_rng.hpp  uint128.hpp
case_studies/BRNG/sobol_tables/: joe_kuo_old_1111.hpp  joe_kuo_other_0_7600.hpp  joe_kuo_other_2_3900.hpp  joe_kuo_other_3_7300.hpp  joe_kuo_other_4_5600.hpp  new_joe_kuo_5_21201.hpp  new_joe_kuo_6_21201.hpp  new_joe_kuo_7_21201.hpp
dynamic/: .clang-format
dynamic/tests/: CMakeLists.txt  checkpoint.cpp  credit_curve.cpp  functions.cpp
dynamic/tests/credit/: array_operators.hpp  dates.hpp  fi_instruments.hpp  mdspan.hpp  yield_curve.hpp
include/: add_sat.hpp  adhoc.hpp  backpropagator.hpp  backpropagator_aux.hpp  backpropagator_buffer_size.hpp  backpropagator_tools.hpp  base.hpp  calc_tree.hpp  constants_type.hpp  dependency.hpp  differential_operator.hpp  monomial_included.hpp  name.hpp  order.hpp  sort.hpp  tape_buffer_size.hpp  type_name.hpp
public/: adhoc.hpp  adhoc2.hpp  adhoc3.hpp  base.hpp  base3.hpp  calc_order.hpp  constants.hpp  constants_constexpr.hpp  constants_double.hpp  constants_type.hpp  constants_type3.hpp  dependency.hpp  dependency3.hpp  erf_inv.hpp  evaluate.hpp  evaluate_bwd.hpp  evaluate_fwd.hpp  filter.hpp  init.hpp  leafs.hpp  tape.hpp  tape_input.hpp  tape_input3.hpp  tape_intermediate.hpp  tape_nodes.hpp  tape_output.hpp  tape_size.hpp  tape_size_bwd.hpp  tape_size_fwd.hpp  tape_static.hpp  tuple_utils.hpp  utils.hpp
public3/: adhoc.hpp  base.hpp  calc_order.hpp  calc_tree.hpp  constants_constexpr.hpp  constants_type.hpp  dependency.hpp  ders.hpp  differential_operator.hpp  differential_operator_2.hpp  (+11 more)
test/: CMakeLists.txt  backpropagator.cpp  backpropagator_tools.cpp  black_scholes1.cpp  black_scholes2.cpp  black_scholes3.cpp  calc_tree.cpp  calc_tree_fail_not_input.cpp  calc_tree_fail_not_on_tree.cpp  call_price.hpp  copy_ordered.cpp  dependency.cpp  differential_operator.cpp  differential_operator.t.cpp  differential_operator.t.fail.cpp  differential_operator2.t.cpp  finite_differences.hpp  half_square.cpp  is_input.cpp  monomial_included.cpp  name.cpp  name_gcc.cpp  order.cpp  sort.cpp  statistics.hpp  test_tools.hpp  univariate_vs_fd.cpp  univariate_vs_fd_gcc.cpp  univariate_vs_python.cpp  univariate_vs_python_gcc.cpp
test/combinatorics/: multinomial_coefficient.cpp  multinomial_coefficient_index_sequence.cpp
test/data/: lgamma.csv  lgamma.py  zeta.py  zeta_pos_large.py
test/utils/: index_sequence.cpp  tuple.cpp  univariate.cpp
tests/: BS.t.cpp  CMakeLists.txt  adhoc.t.cpp  call_price.hpp  constants.t.cpp  constants_double_to_uint.t.cpp  evaluate_bwd.t.cpp  evaluate_fwd.t.cpp  leafs.t.cpp  least_squares.t.cpp  mcsim.cpp  mcsim.t.cpp  nttp.cpp  nttp_final.cpp  opencl.t.cpp  rng.cpp  singleton.cpp  static_tape.t.cpp  tape.t.cpp  tape_input.t.cpp  tape_size.t.cpp  tape_size_bwd.t.cpp  tape_size_fwd.t.cpp  test.cpp  test2.cpp  tuple_utils.t.cpp  type_name.hpp  vector.cpp  yc_test.cpp
tests/new/: BS.t.cpp  adhoc.t.cpp  constants.t.cpp  evaluate_bwd.t.cpp  evaluate_fwd.t.cpp  leafs.t.cpp  mcsim.t.cpp  static_tape.t.cpp  tape_size_bwd.t.cpp  tape_size_fwd.t.cpp  tuple_utils.t.cpp
tests3/: CMakeLists.txt  base.t.cpp  calc_tree.t.cpp  call_price.hpp  composition.t.cpp  dependency.t.cpp  ders.t.cpp  differential_operator.t.cpp  differential_operator_2.t.cpp  part.py  part2.py  part3.py  raw.t.cpp  tape.t.cpp  tape2.t.cpp  tape_buffer_size.t.cpp  tuple_utils.t.cpp  type_name.hpp
tests3/differential_operator/: expand_multinomial.t.cpp  expand_tree.t.cpp  expand_univariate.t.cpp  integer_partition_univariate_function.t.cpp  order_differential_operator.t.cpp  ordered_mult.t.cpp
tests3/paper2024/: digital1.cpp  digital1.hpp  digital2.cpp  digital2.hpp  digital3.cpp  digital3.hpp  section4.cpp  section5.cpp
tests3/partition/: binomial_coefficient.t.cpp  integer_partition.t.cpp  integer_partition_univariate_function.t.cpp  multinomial_coefficient.t.cpp  partition_function.t.cpp
tests4/: CMakeLists.txt  adhoc.t.cpp  adhoc_vs_fd.t.cpp  adhoc_vs_python.t.cpp  backpropagator.t.cpp  backpropagator2.t.cpp  backpropagator_tools.t.cpp  black_scholes1.t.cpp  black_scholes2.t.cpp  black_scholes3.t.cpp  calc_tree.t.cpp  call_price.hpp  differential_operator.t.cpp  finite_differences.cpp  finite_differences.hpp  float_to_string.cpp  half_square.t.cpp  monomial_included.t.cpp  name.t.cpp  order.t.cpp  saturation_arithmetic.t.cpp  sort.t.cpp  univariate_vs_fd.t.cpp  univariate_vs_python.t.cpp  zeta.t.cpp
tests4/combinatorics/: multinomial_coefficient.t.cpp
tests4/data/: lgamma.csv  lgamma.py  zeta.csv  zeta.py  zeta_neg_large.py  zeta_pos_large.csv
tests4/utils/: index_sequence.t.cpp  tuple.t.cpp  univariate.t.cpp
(+241 files in other folders)
